objects/AccountContactRelation.object
<CustomObject>
    <fields>
        <fullName>Access_DB_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Access DB External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agency Rejection</fullName>
                </value>
                <value>
                    <fullName>Agency Inactivation</fullName>
                </value>
                <value>
                    <fullName>Agent Inactivation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agent_Name__c</fullName>
        <label>Agent Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_License_Number__c</fullName>
        <formula>Contact.License_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact License Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <formula>TEXT(Contact.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initiated_By__c</fullName>
        <label>Initiated By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agency</fullName>
                </value>
                <value>
                    <fullName>Agent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Main_Contact_Email__c</fullName>
        <label>Main Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Main_Contact_Name__c</fullName>
        <label>Main Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSP_Specific_Title__c</fullName>
        <label>PSP Specific Title</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Strength__c</fullName>
        <label>Relationship Strength</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Strong</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Weak</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Pending Payment</fullName>
                    <default>true</default>
                    <label>Pending Payment</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TaskId__c</fullName>
        <label>TaskId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agentFromAppRecordTypeCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to check whether agent added from Application Account Record Type.</description>
        <label>agentFromAppRecordTypeCreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>correlationID__c</fullName>
        <label>correlationID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>relatedAccountsCount__c</fullName>
        <label>relatedAccountsCount</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <validationRules>
        <fullName>Active_to_Inactive</fullName>
        <active>false</active>
        <errorConditionFormula>((ISPICKVAL(PRIORVALUE(Status__c),&quot;Active&quot;) &amp;&amp; ISPICKVAL(Status__c, &apos;Inactive&apos;)) 
)</errorConditionFormula>
        <errorMessage>Active to Inactive only</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Agency_Status_Active</fullName>
        <active>false</active>
        <errorConditionFormula>$Permission.CFDA_Customer_Admin_User &amp;&amp; ((NOT(ISPICKVAL(PRIORVALUE( Status__c ), &quot;Active&quot;)) &amp;&amp; ISPICKVAL(Status__c, &quot;Active&quot;))
|| (NOT(ISPICKVAL(PRIORVALUE( Status__c ), &quot;Pending&quot;)) &amp;&amp; ISPICKVAL(Status__c, &quot;Pending&quot;) )
|| (ISPICKVAL(PRIORVALUE( Status__c ), &quot;Active&quot;) &amp;&amp; ISPICKVAL(Status__c, &quot;Pending Payment&quot;))
|| (ISPICKVAL(PRIORVALUE( Status__c ), &quot;Inactive&quot;) &amp;&amp; ISPICKVAL(Status__c, &quot;Pending Payment&quot;))
|| (ISPICKVAL(PRIORVALUE( Status__c ), &quot;Pending Payment&quot;) &amp;&amp; ISPICKVAL(Status__c, &quot;Inactive&quot;))
)</errorConditionFormula>
        <errorMessage>Cannot change the Status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Agent_Status_Active</fullName>
        <active>true</active>
        <errorConditionFormula>$Permission.CFDA_Customer_Agent_User &amp;&amp; ((NOT(ISPICKVAL(PRIORVALUE( Status__c ), &quot;Active&quot;)) &amp;&amp; ISPICKVAL(Status__c, &quot;Active&quot;))  
|| (NOT(ISPICKVAL(PRIORVALUE( Status__c ), &quot;Pending&quot;)) &amp;&amp; ISPICKVAL(Status__c, &quot;Pending&quot;) )
|| (NOT(ISPICKVAL(PRIORVALUE( Status__c ), &quot;Pending Payment&quot;)) &amp;&amp; ISPICKVAL(Status__c, &quot;Pending Payment&quot;)) 
|| (ISPICKVAL(PRIORVALUE( Status__c ), &quot;Pending Payment&quot;) &amp;&amp; ISPICKVAL(Status__c, &quot;Inactive&quot;)) 
|| (ISPICKVAL(PRIORVALUE( Status__c ), &quot;Pending&quot;) &amp;&amp; ISPICKVAL(Status__c, &quot;Inactive&quot;))
)</errorConditionFormula>
        <errorMessage>An Agent can only change the Status from Active to Inactive</errorMessage>
    </validationRules>
</CustomObject>